--- a/Report.Rmd
+++ b/Report.Rmd
@@ -416,6 +416,7 @@ analyze_numeric(
 
 **Interpretation:** The distribution of tenure is **strongly right-skewed**, evidenced by the **Mean** _(7.01)_ exceeding the **Median** _(5.0)_. The boxplot reveals significant **upper outliers** _(up to 40 years)_, indicating that while the typical employee has a tenure of 5 years or less, a distinct cohort of long-term veterans remains, heavily influencing the average.
 
+\newpage
 # Bivariate Analysis
 
 This section investigates the relationships between pairs of variables to identify potential drivers of attrition. We employ contingency tables for categorical data and correlation matrices for numerical attributes.
@@ -471,11 +472,12 @@ par(mar = c(5, 4, 4, 2) + 0.1)
 
 **Interpretation:** The analysis identifies **low** job satisfaction as a driver of attrition. Among employees who left the organization, **28%** reported 'Low' satisfaction, compared to only **18%** among those who stayed. The bar chart visually confirms this trend: as **satisfaction levels rise**, the volume of **retained employees** _(Blue)_ **increases** substantially, indicating that higher morale is strongly linked to workforce stability.
 
+\newpage
 ## Financial Factors & Attrition (Numeric vs. Categorical)
 
 This section examines the relationship between **Monthly Income** and employee **Attrition** to assess whether compensation levels differ between employees who stay and those who leave the organization. Group-wise summary statistics and correlation coefficients are used to describe the association between income and attrition status.
 
-```{r monthly-income-vs-attrition}
+```{r monthly-income-vs-attrition, fig.cap="Boxplot of monthly income by attrition status, showing lower median income and reduced income dispersion among employees who left the organization compared to those who stayed.", fig.pos = 'H'}
 
 income_by_attrition <- data.frame(
   Mean   = tapply(hr$MonthlyIncome, hr$Attrition, mean),
@@ -503,6 +505,7 @@ attrition_numeric <- as.numeric(hr$Attrition) - 1
 
 **Interpretation:** Employees who left the organization earn **lower monthly incomes** than those who stayed, as reflected in both mean and median values.
 
+\newpage
 ## Demographics & Attrition (Numeric vs. Numeric)
 
 We examine the demographic profile of the workforce, specifically focusing on **Age** and **Years at Company** _(Tenure)_. We compare the distributions of these variables across attrition groups to determine if younger or newer employees are at higher risk of leaving.
@@ -642,14 +645,6 @@ knitr::kable(
 $$\widehat{\text{MonthlyIncome}} = `r b0` + `r b1`(\text{YearsAtCompany})$$
 
 **Interpretation:** The analysis confirms a significant positive link ($p < 0.001$) where income grows by **\$395/year** from a **\$3,733** baseline. However, tenure explains only **26.45%** of the variance ($R^2=0.26$), and the **high residual error** _(4,039)_ implies that compensation is largely driven by other factors like role or performance.
-
-# Conclusion I
-
-This report conducted a descriptive and exploratory statistical analysis of the IBM HR Employee Attrition dataset to examine workforce structure and key factors associated with employee turnover. The analysis revealed a relatively low attrition rate, indicating overall workforce stability, supported by generally high levels of job satisfaction and work–life balance.
-
-Bivariate analysis showed that attrition is more common among younger employees with lower tenure and lower monthly income, suggesting that employee turnover is primarily an early-career phenomenon. Employees reporting low job satisfaction were disproportionately more likely to leave the organization, highlighting the importance of employee sentiment in retention.
-
-Finally, the regression analysis confirmed a statistically significant positive relationship between years at company and monthly income, although the moderate explanatory power indicates that tenure alone does not fully explain income variation. Overall, the findings emphasize the need for targeted retention strategies focused on early-career employees to enhance long-term organizational stability.
 
 # Conclusion II
 
