--- a/Report.Rmd
+++ b/Report.Rmd
@@ -21,7 +21,7 @@ header-includes:
   - \usepackage{graphicx}
   - \pagestyle{fancy}
   - \fancyhf{}
-  - \fancyhead[R]{\includegraphics[height=1cm]{bht-logo.png}}
+  - \fancyhead[R]{\includegraphics[height=1cm]{bht-logo.pdf}}
   - \renewcommand{\headrulewidth}{0pt}
   - \fancyfoot[C]{\thepage}
 output:
