IBM - Conclusion highlight fixes.

--- a/Report.Rmd
+++ b/Report.Rmd
@@ -663,8 +663,8 @@ $$\widehat{\text{MonthlyIncome}} = `r b0` + `r b1`(\text{YearsAtCompany})$$
 
 # Conclusion
 
-This report characterized the IBM workforce structure and attrition dynamics through a rigorous descriptive statistical framework. Univariate analysis revealed that key quantitative variables - specifically **Monthly Income** and **Years at Company** are strongly **right-skewed**, with means consistently exceeding medians. This distributional asymmetry indicates that "average" workforce metrics are inflated by a small cohort of high-tenure, high-income outliers, suggesting that median values serve as more robust central estimators for this population.
+This report characterized the IBM workforce structure and attrition dynamics through a rigorous descriptive statistical framework. Uni-variate analysis revealed that key quantitative variables - specifically **Monthly Income** and **Years at Company** are strongly **right-skewed**, with means consistently exceeding medians. This distributional asymmetry indicates that "average" workforce metrics are inflated by a small cohort of high-tenure, high-income outliers, suggesting that median values serve as more robust central estimators for this population.
 
-Bivariate investigation identified statistically distinct profiles for attrition. Contingency table analysis quantified the risk of low morale: employees with 'Low' job satisfaction exhibited a conditional attrition rate of **28%**, compared to only **18%** among their retained counterparts. Demographic comparisons further contextualized turnover as an early-career phenomenon, with boxplots confirming that attrition is statistically concentrated in the lower quartiles of the Age _(Median: 32 vs 36)_ and Tenure distributions
+Bivariate investigation identified statistically distinct profiles for attrition. Contingency table analysis quantified the risk of low morale: employees with 'Low' job satisfaction exhibited a conditional attrition rate of **28%**, compared to only **18%** among their retained counterparts. Demographic comparisons further contextualized turnover as an early-career phenomenon, with boxplots confirming that attrition is statistically concentrated in the lower quartiles of the **Age** _(Median: 32 vs 36)_ and **Tenure** distributions
 
 Finally, the linear regression analysis established a statistically significant **positive relationship** ($p < 0.001$) between _tenure_ and _compensation_. However, the model's moderate coefficient of determination ($R^2 \approx 0.26$) and **high residual standard error** ($4,039$) demonstrate that tenure is a necessary but insufficient predictor of income. The substantial unexplained variance implies that unobserved heterogeneity-likely driven by **Job Level** or some other variables we did not include - plays a dominant role in the organization's compensation structure.
